selection logic advancing

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <script src="https://d3js.org/d3.v7.min.js"></script>
 <script src="./js/main.js"></script>
+<script src="./js/test.js"></script>
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 </body>
