--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <script src="https://d3js.org/d3.v7.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/d3@7/dist/d3.min.js"></script>
 <script src="./js/main.js"></script>
 <script src="./js/test.js"></script>
 <link rel="stylesheet" type="text/css" href="styles.css">
